# qwindowkit

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/mainwindow/: CMakeLists.txt  MyRectangle.qml  form.cpp  form.h  form.ui  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.qrc
examples/widgetWithQuick/: CMakeLists.txt  mainwindow.cpp  widgetWithQuick.qrc
